Try build arcade net9 (#25085)
* try

* try again

* Try more build

* Fix snupkg

* try publish

* fix depends

* fix

* Fix signing

* Fix condition

* try without this

* Try install workloads

* add catalyst

* Try install .dotnet

* Skip install .net

* Nowarn

* Set java home

* try sign

* sign dll

* dix

* more variables

* try other

* fix

* Remove pool changes

* Fix path

* dotnet

* remvoe restore

* Again

* Try bump arcade

* TreatWarningsAsErrors

* will this work

* Try -warnAsError 0

* again

* extra nowarn

* Fix variable

* Fix _BuildOfficalId

* Fix signing

* Update arcade

* Don t push this

* Dont update build number

* Add back cake script

* Add nuget.config again

* Clean signing

* try these feeds

* less premissions

* Try this

* Try fix the bin folder

* Fix nuget config

* Use DotNetTempDirectory for the script

* Fix device tests

* Add missing variable

* We need this

* Try this

* try this

* Add public pipeline

* Fix cake

* Fix tool

* Fix device

* try workloads

* try fix test

* fix sign

* more quick

* needs t build

* Fix windows script

* Try workloads

* fix location

* fix

* Try with this

* try fix paths

* try this again

* try use the latest tooling

* Revert "try use the latest tooling"

This reverts commit 1b337f8b735b03b4403950feff480ba85e891b49.

* Update variables.yml

* Update DotnetInternal.cs

* More fixes

* Update build-test-pack.yml

* Update latest arcade

* Add missing feeds

* Remove package source mapping

* Update windows.cake

* Update windows.cake

* Update global.json

* Try _SkipUpdateBuildNumber

* again

* Update variables.yml

* Again

* Include this

* Update vsmanproj

* Nove to arcade ne9

* Update rtm

* Dont build workloads

* Update rtm

* Update NuGet.config

* Update global.json

* Update Versions.

--- a/src/DotNet/DotNet.csproj
+++ b/src/DotNet/DotNet.csproj
@@ -3,16 +3,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <InstallWorkloadPacks Condition=" '$(InstallWorkloadPacks)' == '' ">true</InstallWorkloadPacks>
+    <InstallDotNet Condition=" '$(InstallDotNet)' == '' ">true</InstallDotNet>
     <InternalAzureFeed>https://dotnetbuilds.blob.core.windows.net/internal</InternalAzureFeed>
     <DotNetFeedUrl>https://dotnetbuilds.blob.core.windows.net/public</DotNetFeedUrl>
     <NugetArtifactsPath>$(MauiRootDirectory)/artifacts</NugetArtifactsPath>
     <PrivateSdk>$(PRIVATE_BUILD)</PrivateSdk>
     <PrivateSdk  Condition=" '$(PrivateSdk)' == ''">false</PrivateSdk>
+    <_SkipUpgradeNetAnalyzersNuGetWarning>true</_SkipUpgradeNetAnalyzersNuGetWarning>
+    <_SkipUpdateBuildNumber>true</_SkipUpdateBuildNumber>
   </PropertyGroup>
   <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('windows'))">
     <DotNetInstallScriptUrl>https://dot.net/v1/dotnet-install.ps1</DotNetInstallScriptUrl>
     <DotNetInstallScriptName>dotnet-install.ps1</DotNetInstallScriptName>
-    <DotNetInstallScriptPath>$(DotNetOutputPath)$(DotNetInstallScriptName)</DotNetInstallScriptPath>
+    <DotNetInstallScriptPath>$(DotNetTempDirectory)$(DotNetInstallScriptName)</DotNetInstallScriptPath>
     <DotNetInstallCommand>&amp; '$(DotNetInstallScriptPath)' -Version $(MicrosoftDotnetSdkInternalPackageVersion) -InstallDir '$(DotNetDirectory)' -Verbose</DotNetInstallCommand>
     <DotNetInstallCommand Condition=" '$(PrivateSdk)' != 'true' ">$(DotNetInstallCommand) -AzureFeed $(DotNetFeedUrl)</DotNetInstallCommand>
     <DotNetInstallCommand Condition=" '$(PrivateSdk)' == 'true' ">$(DotNetInstallCommand) -AzureFeed $(InternalAzureFeed) -FeedCredential $env:DOTNET_TOKEN</DotNetInstallCommand> 
@@ -21,7 +24,7 @@
   <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('osx'))">
     <DotNetInstallScriptUrl>https://dot.net/v1/dotnet-install.sh</DotNetInstallScriptUrl>
     <DotNetInstallScriptName>dotnet-install.sh</DotNetInstallScriptName>
-    <DotNetInstallScriptPath>$(DotNetOutputPath)$(DotNetInstallScriptName)</DotNetInstallScriptPath>
+    <DotNetInstallScriptPath>$(DotNetTempDirectory)$(DotNetInstallScriptName)</DotNetInstallScriptPath>
     <DotNetInstallCommand>bash '$(DotNetInstallScriptPath)' --version $(MicrosoftDotnetSdkInternalPackageVersion) --install-dir '$(DotNetDirectory)' --verbose</DotNetInstallCommand>
     <DotNetInstallCommand Condition=" '$(PrivateSdk)' != 'true' ">$(DotNetInstallCommand) --azure-feed $(DotNetFeedUrl)</DotNetInstallCommand>
     <DotNetInstallCommand Condition=" '$(PrivateSdk)' == 'true' ">$(DotNetInstallCommand) --azure-feed $(InternalAzureFeed) --feed-credential $DOTNET_TOKEN</DotNetInstallCommand>
@@ -36,12 +39,12 @@
     </_ProvisionDependsOn>
   </PropertyGroup>
 
-  <!-- Build target provisions ./bin/dotnet/ -->
+  <!-- Build target provisions ./.dotnet/ -->
   <Target Name="_Provision" BeforeTargets="Build" DependsOnTargets="$(_ProvisionDependsOn)" />
 
   <!--
     Install target takes artifacts/*.nupkg and installs them to the current 'dotnet'.
-    Running this with ./bin/dotnet/dotnet will work without elevation.
+    Running this with ./.dotnet/dotnet will work without elevation.
     For a system install, you will need to run this in an admin command-prompt on Windows, or use 'sudo' on Mac.
   -->
   <Target Name="Install">
@@ -83,7 +86,7 @@
   </Target>
 
   <PropertyGroup>
-    <!-- These files should invalidate ./bin/dotnet completely -->
+    <!-- These files should invalidate ./.dotnet/ completely -->
     <_Inputs>
       $(MSBuildThisFile);
       ../../eng/Versions.props;
@@ -92,10 +95,11 @@
 
   <Target Name="_DownloadDotNetInstallScript"
       Inputs="$(_Inputs)"
-      Outputs="$(DotNetInstallScriptPath)">
+      Outputs="$(DotNetInstallScriptPath)"
+      Condition=" '$(InstallDotNet)' == 'true' ">
     <DownloadFile
         SourceUrl="$(DotNetInstallScriptUrl)"
-        DestinationFolder="$(DotNetOutputPath)"
+        DestinationFolder="$(DotNetTempDirectory)"
         DestinationFileName="$(DotNetInstallScriptName)"
     />
   </Target>
@@ -128,7 +132,9 @@
 
   <Target Name="_InstallDotNet"
       Inputs="$(_Inputs)"
-      Outputs="$(DotNetDirectory).stamp">
+      Outputs="$(DotNetDirectory).stamp"
+      Condition=" '$(InstallDotNet)' == 'true' ">
+
     <RemoveDir Directories="$(DotNetDirectory)" />
     <Exec Command="$(DotNetInstallCommand)" />
     <Exec Condition=" '$(VersionFromAndroid)' != '' " Command="$(DotNetXARuntimeInstallCommand)" />
