--- a/eng/Tools.props
+++ b/eng/Tools.props
@@ -1,13 +1,15 @@
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0"
+  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <Target Name="InitInternalTooling" AfterTargets="Restore">
     <Message Text="Installing the workloads" Importance="high" />
+    <!-- <MSBuild Projects="$(RepoRoot)src/DotNet/DotNet.csproj" Targets="Build" /> -->
+    <Exec
+      Command="dotnet build $(RepoRoot)src/DotNet/DotNet.csproj -p:InstallDotNet=false"
+      WorkingDirectory="$(RepoRoot)"
+      EnvironmentVariables="DOTNET_MULTILEVEL_LOOKUP=0" />
 
-    <!-- <MSBuild Projects="$(RepoRoot)src/DotNet/DotNet.csproj"
-        Targets="Build" /> -->
-     <Exec
-        Command="dotnet build $(RepoRoot)src/DotNet/DotNet.csproj -p:InstallDotNet=false"
-        WorkingDirectory="$(RepoRoot)"
-        EnvironmentVariables="DOTNET_MULTILEVEL_LOOKUP=0" />
+    <Message Text="Provisioning Android SDK..." Importance="high" />
+    <Exec Command="dotnet build $(RepoRoot)src/Provisioning/Provisioning.csproj -t:ProvisionAndroidSdk=True" WorkingDirectory="$(RepoRoot)" />
   </Target>
 </Project>
