[release/9.0.1xx] Build arcade net9 on GA branch (#25336)
* Work on UI tests

* Fix api scan

* Revert "Update windows samples" (#25059)

This reverts commit 05fdf09fd6507644c6fc0fcaf74be9a40e9e75e7.

* [net9] Try fix running UITests on iOS18 (#25070)

* [housekeeping] Update & Consolidate Appium + driver versions (#24817)

* Update appium + driver versions

Updating to latest

* Move appium versions to eng/Versions.props

* Fix ps1 get-location

* Check if appium is completely missing too

No need to attempt to uninstall appium if it's not installed

* - bump versions

* - fix script

---------

Co-authored-by: Shane Neuville <shneuvil@microsoft.com>

* Try iOS18 device

* See if this works

* Try xs

---------

Co-authored-by: Jonathan Dick <jodick@microsoft.com>
Co-authored-by: Shane Neuville <shneuvil@microsoft.com>

* Update latest stuff of arcade (#25086)

* Remove Drag and Drop Tests from Catalyst (#25039)

* try

* try again

* Try more build

* Fix snupkg

* try publish

* fix depends

* fix

* Fix signing

* Fix condition

* try without this

* Try install workloads

* add catalyst

* Try install .dotnet

* Skip install .net

* Nowarn

* Set java home

* try sign

* sign dll

* dix

* more variables

* try other

* fix

* Remove pool changes

* Fix path

* dotnet

* remvoe restore

* Again

* Try bump arcade

* TreatWarningsAsErrors

* will this work

* Try -warnAsError 0

* again

* extra nowarn

* Fix variable

* Fix _BuildOfficalId

* Fix signing

* Update arcade

* Don t push this

* Dont update build number

* Add back cake script

* Add nuget.config again

* Clean signing

* try these feeds

* less premissions

* Try this

* Try fix the bin folder

* Fix nuget config

* Use DotNetTempDirectory for the script

* Fix device tests

* Add missing variable

* We need this

* Try this

* try this

* Add pu

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -134,6 +134,12 @@
     <ExCSSPackageVersion>4.2.3</ExCSSPackageVersion>
     <SystemDrawingCommonPackageVersion>8.0.3</SystemDrawingCommonPackageVersion>
     <MicrosoftDotNetBuildTasksFeedVersion>9.0.0-beta.24509.3</MicrosoftDotNetBuildTasksFeedVersion>
+    <MicrosoftDotNetBuildTasksInstallersPackageVersion>9.0.0-beta.24509.3</MicrosoftDotNetBuildTasksInstallersPackageVersion>
+    <MicrosoftDotNetBuildTasksWorkloadsPackageVersion>9.0.0-beta.24509.3</MicrosoftDotNetBuildTasksWorkloadsPackageVersion>
+    <MicrosoftDotNetHelixSdkPackageVersion>9.0.0-beta.24509.3</MicrosoftDotNetHelixSdkPackageVersion>
+    <MicroBuildPluginsSwixBuildDotnetPackageVersion>1.1.87-gba258badda</MicroBuildPluginsSwixBuildDotnetPackageVersion>
+    <MicrosoftDotNetRemoteExecutorPackageVersion>9.0.0-beta.24509.3</MicrosoftDotNetRemoteExecutorPackageVersion>
+    <MicrosoftDotNetXUnitExtensionsPackageVersion>9.0.0-beta.24509.3</MicrosoftDotNetXUnitExtensionsPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <MicrosoftNETTestSdkPackageVersion>17.6.0</MicrosoftNETTestSdkPackageVersion>
@@ -145,6 +151,14 @@
     <XunitAbstractionsPackageVersion>2.0.3</XunitAbstractionsPackageVersion>
     <NSubstitutePackageVersion>5.1.0</NSubstitutePackageVersion>
     <CoverletCollectorPackageVersion>6.0.0</CoverletCollectorPackageVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <!-- Appium -->
+    <AppiumVersion>2.11.5</AppiumVersion>
+    <AppiumWindowsDriverVersion>2.12.32</AppiumWindowsDriverVersion>
+    <AppiumXCUITestDriverVersion>7.27.0</AppiumXCUITestDriverVersion>
+    <AppiumMac2DriverVersion>1.19.1</AppiumMac2DriverVersion>
+    <AppiumUIAutomator2DriverVersion>3.8.0</AppiumUIAutomator2DriverVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- arcade -->
